talos/argocd/resources/ingress.yaml
# Traefik ingress with Let's Encrypt TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-local-asandov
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: argo.local.asandov.com
    http:
      paths:
      - backend:
          service:
            name: talos-argo-argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argo.local.asandov.com
    secretName: argocd-local-tls
